kserve-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resnet-mlops-ingress
  namespace: mlops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: resnet-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resnet-mlops-predictor
                port:
                  number: 80
